app/assets/stylesheets/_layout.sass
html
  font-size: 62.5%

body
  -webkit-text-size-adjust: none
  -webkit-font-smoothing: antialiased
  background: $light
  color: $dark
  font-family: $primary-typeface
  font-size: 1.6em

header.site_head
  position: fixed
  left: 0
  right: 0
  top: 0
  z-index: 1
  padding: 2vw 6vw
  text-align: center
  div
    display: inline-block
    position: relative
  a
    display: block
    font-family: $secondary-typeface
    text-transform: uppercase
    color: $navy
    letter-spacing: .1em
    font-weight: 900
    font-size: 7vw
    line-height: 1
  h2
    position: absolute
    right: 0
    top: 90%
    a
      text-align: right
      color: $red
      font-size: 1.4rem
      font-weight: 700
      margin-right: 1vw
      background: left 55% no-repeat url(/assets/logo_footer.png)
      background-size: 1.8rem auto
      padding: 1rem 0 1rem 2.5rem
  +mobile
    z-index: 100
    background: #fff
    text-align: right
    +box_outline
    padding-right: 1rem
    padding-bottom: 0
    h2
      position: static
      float: right
      margin-top: -1rem

.site_nav
  position: fixed
  bottom: 0
  left: 0
  z-index: 100
  > ul
    +clearfix
    +mobile
      background: transparentize(#fff, .2)
      border-top: 2px solid transparentize(#fff, .1)
    > li
      clear: left
      float: left
      +mobile
        clear: none
      &.site_nav--open
        .site_nav__link
          opacity: 1
        .site_nav__toggle
          width: auto
          opacity: 1
          box-shadow: 0 0 3rem transparentize($navy, .8)

.site_nav__link
  display: inline-block
  +responsive(width, 6rem, 5rem)
  +responsive(height, 6rem, 5rem)
  transition: opacity .2s
  border: none
  +hide-text
  background: transparent center no-repeat
  background-size: 60% auto
  opacity: .7
  &:hover
    opacity: 1

.site_nav__toggle
  position: absolute
  left: 100%
  bottom: 0
  width: 0
  overflow: hidden
  transition: opacity .2s
  opacity: 0
  +mobile
    bottom: 100%
    left: 0
    margin-bottom: 1rem

.site_nav__statistics
  a.site_nav__link
    background-image: svg-url(stats, $accent)

.site_nav__about
  position: relative
  a.site_nav__link
    background-image: svg-url(help, $accent)
  .site_nav__toggle
    .copy
      box-sizing: border-box
      padding: 2em
      font-style: italic
      background: #fff
      font-size: .9em
  &.site_nav--open
    .site_nav__toggle
      .copy
        width: 40rem
        +mobile
          width: 30rem
  ul.social
    list-style-type: none
    margin: 0
    padding: 0
    +clearfix
    li
      width: 50%
      float: left
      box-sizing: border-box
      margin: 0
      padding: 0
      +mobile
        width: auto
        float: none
    a.social_twitter,
    a.social_github
      display: block
      padding-left: 3rem
      line-height: 3rem
      background: left center no-repeat
      background-size: 2.5rem auto
      font-family: $secondary-typeface
      font-weight: 700
      font-style: normal
      color: $base
      +mobile
        font-size: .9em
    a.social_twitter
      background-image: svg-url(twitter, $accent)
      &:hover
        background-image: svg-url(twitter, #55acee)
        color: #55acee
    a.social_github
      background-image: svg-url(github, $accent)
      &:hover
        background-image: svg-url(github, #4b4b4b)
        color: #4b4b4b

.site_nav__search
  position: relative
  .site_nav__link
    background-image: svg-url(search, $accent)
  .site_nav__toggle
    background: #fff
    white-space: nowrap
    top: 0
    bottom: auto
    +responsive(margin-top, 1rem, .5rem)
    button[type='submit']
      margin: 0
    input[type='search']
      width: 15rem
      background: transparentize(#fff, .2)
      border: none
      &:focus
        background: #fff

.admin_panel
  position: fixed
  top: 0
  left: 0
  right: 0
  font-family: $secondary-typeface
  font-weight: 700
  font-size: .8em
  text-align: center
  z-index: 999
  ul
    display: inline-block
    +box-outline
    border-top: none
    +mobile
      display: block
  li
    display: inline-block
    a
      display: block
      padding: .5rem 1rem
      color: $blue
      line-height: 1.5rem
      &:hover
        color: $red
  + .site_head
    margin-top: 2.5rem
    + main
      padding-top: 2.5rem

main
  position: relative
  min-height: 60vh
  margin: 14vw 0 7rem 0
  z-index: 2
  +tablet
    margin-top: 16vw
  +mobile
    margin-top: 18vw

header.page_head
  text-align: center
  h1
    +responsive(font-size, 3rem, 2rem, 1.5rem)
    margin-bottom: 1em
    color: $navy

#flash
  position: fixed
  top: 0
  +responsive(left, 15vw, $narrow: 5vw)
  +responsive(right, 15vw, $narrow: 5vw)
  z-index: 1000
  text-align: center
  p
    background: #fff
    border: 5px solid $accent
    border-top: 0
    color: $accent
    padding: 2vw
    +responsive(font-size, 1.4em, 1.2em, 1em)
    cursor: pointer
    opacity: .9
    &.error
      border-color: $error
      color: $error

